--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         .tab {
             padding: 10px 20px;
             background-color: gray;
+            cursor: pointer;
+        }
+
+        .tab-content {
+            padding: 10px 20px;
+            background-color: green;
         }
     </style>
 </head>
